--- a/DiseñoEstilo.css
+++ b/DiseñoEstilo.css
@@ -49,9 +49,13 @@ img{
   height: 25px;
 
 }
-
+.responsive {
+  max-width: 100%;
+  height: auto;
+}
 
 footer{
+  background-image: url(Imagenes/PORTADA.jpg);
 top:10px;
 display:left;
 width: 100%;
@@ -59,7 +63,7 @@ height: 100%;
 /* background-color:red; */
 /*margin-left: auto;
 border-left: 0px; */
-background: rgba(76,76,76,1);
+/*background: rgba(76,76,76,1);
 background: -moz-linear-gradient(45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 43%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
 background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(76,76,76,1)), color-stop(12%, rgba(89,89,89,1)), color-stop(25%, rgba(102,102,102,1)), color-stop(39%, rgba(71,71,71,1)), color-stop(43%, rgba(44,44,44,1)), color-stop(51%, rgba(0,0,0,1)), color-stop(60%, rgba(17,17,17,1)), color-stop(76%, rgba(43,43,43,1)), color-stop(91%, rgba(28,28,28,1)), color-stop(100%, rgba(19,19,19,1)));
 background: -webkit-linear-gradient(45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 43%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
@@ -68,7 +72,7 @@ background: -ms-linear-gradient(45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%
 background: linear-gradient(45deg, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 43%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=1 );
 Copy text
-color: white;
+color: white;*/
 }
 
 .grilafooter{
@@ -104,7 +108,7 @@ h4{
 
 }
 
-.jumbotron {
+/*.jumbotron {
     text-align: center;
 background: rgba(114,167,203,1);
 background: -moz-linear-gradient(-45deg, rgba(114,167,203,1) 16%, rgba(114,167,203,1) 36%, rgba(69,124,165,1) 59%, rgba(69,124,165,1) 60%);
@@ -115,7 +119,7 @@ background: -ms-linear-gradient(-45deg, rgba(114,167,203,1) 16%, rgba(114,167,20
 background: linear-gradient(135deg, rgba(114,167,203,1) 16%, rgba(114,167,203,1) 36%, rgba(69,124,165,1) 59%, rgba(69,124,165,1) 60%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#72a7cb', endColorstr='#457ca5', GradientType=1 );
 color: white;
-  }
+  }*/
 
 .colorearGrillaQuienesSomos{
   background-color: silver;
@@ -125,8 +129,8 @@ color: white;
 .grillagigante{
 background-color:white;
 /* height: 50%; */
-  /* padding:10px 10px 10px 10px;
-  margin: 10px 10px 10px 10px; */
+  padding:10px 10px 10px 10px;
+  margin: 10px 10px 10px 10px; 
 
 }
 
@@ -192,4 +196,16 @@ background-color:white;
  .margin10{margin-bottom:10px; margin-right:10px;} */
 .ordenPaginaNostros{
 text-align: left;
+}
+
+.jumbotron {
+  /*  margin-bottom: 0px;*/
+    background-image: url(Imagenes/PORTADA.jpg);
+  /* background-position: 0% 25%; */
+  /* background-size: cover;*/
+  /*  background-repeat: no-repeat;*/
+    color: white;
+    text-shadow: black 0.3em 0.3em 0.3em;*/
+    width: 100%;
+   /*height: 200%;*/
 }
